Game INI updates

--- a/Data/Sys/GameSettings/RWO.ini
+++ b/Data/Sys/GameSettings/RWO.ini
@@ -1,12 +1,12 @@
-# RLJPKM - Line Rider Freestyle
+# RWOE69, RWOJ13, RWOP69 - Monopoly
 
 [Core]
 # Values set here will override the main Dolphin settings.
 
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
-EmulationStateId = 5
-EmulationIssues = Needs real xfb for the videos to display.
+EmulationStateId = 4
+EmulationIssues =
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
@@ -17,6 +17,8 @@ EmulationIssues = Needs real xfb for the videos to display.
 [ActionReplay]
 # Add action replay cheats here.
 
+[Video_Hacks]
+EFBEmulateFormatChanges = True
+
 [Video_Settings]
-UseXFB = True
-UseRealXFB = True
+SafeTextureCacheColorSamples = 0
