Game INI updates

--- a/Data/Sys/GameSettings/GIN.ini
+++ b/Data/Sys/GameSettings/GIN.ini
@@ -1,4 +1,4 @@
-# GINE69, GINX69 - Batman
+# GINE69, GINX69 - Batman Begins
 
 [Core]
 # Values set here will override the main Dolphin settings.
@@ -6,7 +6,7 @@
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
 EmulationStateId = 4
-EmulationIssues = FPS drops to 20 in some areas (don't know if this is normal)
+EmulationIssues =
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
@@ -16,4 +16,3 @@ EmulationIssues = FPS drops to 20 in some areas (don't know if this is normal)
 
 [ActionReplay]
 # Add action replay cheats here.
-
