--- a/Data/Sys/GameSettings/SPR.ini
+++ b/Data/Sys/GameSettings/SPR.ini
@@ -1,13 +1,12 @@
-# G5DE78, G5DP78 - Scooby-Doo! Unmasked
+# SPRE41 - The Price Is Right 2010 Edition
 
 [Core]
 # Values set here will override the main Dolphin settings.
-FastDiscSpeed = True
 
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
 EmulationStateId = 4
-EmulationIssues = Can hang during loading screens if Speed Up Disc Transfer Rate isn't used
+EmulationIssues =
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
@@ -18,3 +17,6 @@ EmulationIssues = Can hang during loading screens if Speed Up Disc Transfer Rate
 [ActionReplay]
 # Add action replay cheats here.
 
+[Video_Settings]
+UseXFB = True
+UseRealXFB = False
