--- a/Data/Sys/GameSettings/RIZ.ini
+++ b/Data/Sys/GameSettings/RIZ.ini
@@ -1,12 +1,12 @@
-# RLJPKM - Line Rider Freestyle
+# RIZENR - Indianapolis 500 Legends
 
 [Core]
 # Values set here will override the main Dolphin settings.
 
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
-EmulationStateId = 5
-EmulationIssues = Needs real xfb for the videos to display.
+EmulationStateId = 4
+EmulationIssues =
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
@@ -19,4 +19,4 @@ EmulationIssues = Needs real xfb for the videos to display.
 
 [Video_Settings]
 UseXFB = True
-UseRealXFB = True
+UseRealXFB = False
