Add more languages, and remove Hebrew because it's very incomplete

--- a/Languages/Languages.vcxproj
+++ b/Languages/Languages.vcxproj
@@ -14,22 +14,25 @@
     <msgfmt Include="po\ar.po" />
     <msgfmt Include="po\ca.po" />
     <msgfmt Include="po\cs.po" />
+    <msgfmt Include="po\da_DK.po" />
     <msgfmt Include="po\de.po" />
     <msgfmt Include="po\el.po" />
     <msgfmt Include="po\en.po" />
     <msgfmt Include="po\es.po" />
     <msgfmt Include="po\fa.po" />
     <msgfmt Include="po\fr.po" />
-    <msgfmt Include="po\he.po" />
+    <msgfmt Include="po\hr.po" />
     <msgfmt Include="po\hu.po" />
     <msgfmt Include="po\it.po" />
     <msgfmt Include="po\ja.po" />
     <msgfmt Include="po\ko.po" />
+    <msgfmt Include="po\ms_MY.po" />
     <msgfmt Include="po\nb.po" />
     <msgfmt Include="po\nl.po" />
     <msgfmt Include="po\pl.po" />
     <msgfmt Include="po\pt.po" />
     <msgfmt Include="po\pt_BR.po" />
+    <msgfmt Include="po\ro_RO.po" />
     <msgfmt Include="po\ru.po" />
     <msgfmt Include="po\sr.po" />
     <msgfmt Include="po\sv.po" />
