--- a/Source/Core/DolphinWX/Info.plist.in
+++ b/Source/Core/DolphinWX/Info.plist.in
@@ -37,22 +37,25 @@
 		<string>ar</string>
 		<string>ca</string>
 		<string>cs</string>
+		<string>da_DK</string>
 		<string>de</string>
 		<string>el</string>
 		<string>en</string>
 		<string>es</string>
 		<string>fa</string>
 		<string>fr</string>
-		<string>he</string>
+		<string>hr</string>
 		<string>hu</string>
 		<string>it</string>
 		<string>ja</string>
 		<string>ko</string>
+		<string>ms_MY</string>
 		<string>nb</string>
 		<string>nl</string>
 		<string>pl</string>
 		<string>pt</string>
 		<string>pt_BR</string>
+		<string>ro_RO</string>
 		<string>ru</string>
 		<string>sr</string>
 		<string>sv</string>
