Add md5 testing to netplay
Allows to test current game, an arbitrary game or the sdcard of all players
at once.

--- a/Source/Core/DolphinWX/CMakeLists.txt
+++ b/Source/Core/DolphinWX/CMakeLists.txt
@@ -34,6 +34,7 @@ set(GUI_SRCS
 	Debugger/WatchView.cpp
 	Debugger/WatchWindow.cpp
 	NetPlay/ChangeGameDialog.cpp
+	NetPlay/Md5Dialog.cpp
 	NetPlay/NetPlaySetupFrame.cpp
 	NetPlay/NetWindow.cpp
 	NetPlay/PadMapDialog.cpp
