Update settings for Animal Crossing (GC).

--- a/Data/Sys/GameSettings/GAF.ini
+++ b/Data/Sys/GameSettings/GAF.ini
@@ -28,9 +28,13 @@ SafeTextureCacheColorSamples = 512
 StereoConvergence = 623
 
 [VR]
-UnitsPerMetre = 4.3
+UnitsPerMetre = 35
+HudDistance = 2.50000000
+Hud3DCloser = 0.0015
+CameraForward = 0.40
+AimDistance = 15.0
 CameraPitch = 40
 VRStateId = 4
 CanReadCameraAngles = True
-VRStateId = 4
-VRIssues = Culling
+VRStateId = 3
+VRIssues = Culling, near clipping, bad depth in menus
