Metroid Prime 1 and 2 need GPUDeterminism=auto. Mortal Kombat Deception hide object codes.

--- a/Data/Sys/GameSettings/GQN.ini
+++ b/Data/Sys/GameSettings/GQN.ini
@@ -2,6 +2,7 @@
 
 [Core]
 # Values set here will override the main Dolphin settings.
+GPUDeterminismMode = auto
 
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
@@ -16,3 +17,21 @@ EmulationIssues =
 
 [ActionReplay]
 # Add action replay cheats here.
+
+[VR]
+UnitsPerMetre = 1.0
+CanReadCameraAngles = True
+ScreenUp = -0.2
+ScreenDistance = 2.0
+VRStateID = 2
+VRIssues = use hide object codes, shadows stuck to face, clipping in intro, bad culling
+
+[HideObjectCodes]
+$Flashing HUD
+128bits:0x0000000000000000:0x3F7FFFFF00000000
+$Flashing Square and HUD
+120bits:0x0000000000000000:0x003F7FFFFF000000
+$Shadow square
+128bits:0x1310001312100012:0x100E00100F0D000F
+$Shadow Rectangles
+128bits:0x1410001413100013:0x110F0011100E0010
