Resident Evil 4 Default Settings - improve hide object codes, camera angles, and near clipping in FMV

--- a/Data/Sys/GameSettings/G4B.ini
+++ b/Data/Sys/GameSettings/G4B.ini
@@ -21,11 +21,21 @@ EmulationIssues =
 ProjectionHack = 0
 
 [VR]
-UnitsPerMetre = 850.563660
-HudDistance = 2.000000
+UnitsPerMetre = 851.0
+HudDistance = 2.0
+CameraForward = -0.1
+CanReadCameraAngles = True
+VRStateID = 4
+VRIssues = Use hide object codes, culling, camera angles, near clipping in FMV, distant menu
 
 [HideObjectCodes]
 $1st Set of 16:9 Bars
-32bits:0x0000000000000000:0x0000000000C3A000
+128bits:0x00C3A0000041F000:0x0000000000000100
 $2nd Set of 16:9 Bars
-64bits:0x0000000000000000:0x00000000000A0000
+128bits:0x00000000000A0000:0x00FF02000000000A
+$Blinking Coloured Squares
+128bits:0x00C1800000418800:0x0000000000000100
+$Grey background in intro video
+128bits:0x0000000000000000:0xBF7FFF5844000000
+$Intro cutscene grey background
+128bits:0x0000000000000000:0x0000000002000000
