--- a/Data/Sys/GameSettings/R9I.ini
+++ b/Data/Sys/GameSettings/R9I.ini
@@ -6,7 +6,7 @@
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
 EmulationStateId = 4
-EmulationIssues =
+EmulationIssues = Requires Skip EFB Access from CPU disabled to zoom properly
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
@@ -17,3 +17,5 @@ EmulationIssues =
 [ActionReplay]
 # Add action replay cheats here.
 
+[Video_Hacks]
+EFBAccessEnable = True
