Top Level CMake changes
Added specific CMake configurations for IOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,10 @@ if(APPLE)
 	option(OSX_USE_DEFAULT_SEARCH_PATH "Don't prioritize system library paths" OFF)
 endif()
 
+if (IOS) # Moving this to the toolchain does not work atm
+	set (CMAKE_SYSTEM_PROCESSOR "aarch64")
+endif()
+
 option(ENCODE_FRAMEDUMPS "Encode framedumps in AVI format" ON)
 
 option(FASTLOG "Enable all logs" OFF)
@@ -150,7 +154,7 @@ message(${CMAKE_SYSTEM_PROCESSOR})
 # CMake doesn't provide a simple way to determine 32bit or 64bit
 # If we ever support a architecture that is 64bit with 32bit pointers then this'll break
 # Of course the chances of that are slim(x32?) so who cares
-if(CMAKE_SIZEOF_VOID_P EQUAL 8)
+if((CMAKE_SIZEOF_VOID_P EQUAL 8) OR IOS)
 	set(_ARCH_64 1)
 	add_definitions(-D_ARCH_64=1)
 else()
@@ -162,7 +166,7 @@ if(NOT ENABLE_GENERIC)
 	if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "^x86" OR
 	   ${CMAKE_SYSTEM_PROCESSOR} MATCHES "i.86" OR
 	   ${CMAKE_SYSTEM_PROCESSOR} MATCHES "amd64" OR
-	   APPLE)
+	   (APPLE AND NOT IOS))
 		if(_ARCH_64)
 			set(_M_X86 1)
 			set(_M_X86_64 1)
@@ -178,7 +182,9 @@ if(NOT ENABLE_GENERIC)
 		set(_M_ARM 1)
 		set(_M_ARM_64 1)
 		add_definitions(-D_M_ARM=1 -D_M_ARM_64=1)
-		add_definitions(-march=armv8-a+crc)
+		if(NOT IOS)
+			add_definitions(-march=armv8-a+crc)
+		endif()
 	else()
 		set(ENABLE_GENERIC 1)
 	endif()
@@ -237,7 +243,7 @@ if(ENABLE_LTO)
 	endif()
 endif()
 
-if(APPLE)
+if(APPLE AND NOT IOS)
 	if(NOT OSX_USE_DEFAULT_SEARCH_PATH)
 		# Hack up the path to prioritize the path to built-in OS libraries to
 		# increase the chance of not depending on a bunch of copies of them
@@ -394,6 +400,13 @@ if(ANDROID)
 	# We are cross compiling, search only the toolchain for libraries and includes
 	SET(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
 	SET(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
+elseif(IOS)
+	add_definitions(-DIOS	)
+	set(USE_X11 0)
+	set(USE_UPNP 0)
+	set(USE_EGL 1)
+	set(DISABLE_WX 1)
+	set(ENABLE_QT2 0)
 elseif(NOT APPLE)
 	list(APPEND LIBS rt)
 endif()
@@ -876,7 +889,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD|NetBSD")
 	set(LIBS ${LIBS} usbhid)
 endif()
 
-if(APPLE)
+if(APPLE AND NOT IOS)
 	# Link against OS X system frameworks.
 	list(APPEND LIBS
 		${APPKIT_LIBRARY}
