Xbox controller profiles, and fix Oculus Remote profiles

--- a/Data/Sys/Profiles/Wiimote/Remote Wiimote Nunchuk.ini
+++ b/Data/Sys/Profiles/Wiimote/Remote Wiimote Nunchuk.ini
@@ -1,11 +1,11 @@
 [Profile]
-Device = VR/0/Remote
-Buttons/A = `DInput/0/Keyboard Mouse:Click 0`
-Buttons/B = `DInput/0/Keyboard Mouse:Click 1`
+Device = VR/0/HMD
+Buttons/A = Select
+Buttons/B = Back
 Buttons/1 = `DInput/0/Keyboard Mouse:1`
 Buttons/2 = `DInput/0/Keyboard Mouse:2`
 Buttons/- = `DInput/0/Keyboard Mouse:Q`
-Buttons/+ = `DInput/0/Keyboard Mouse:E`
+Buttons/+ = `VR/0/HMD:Tap`
 Buttons/Home = !`DInput/0/Keyboard Mouse:LMENU` & `DInput/0/Keyboard Mouse:RETURN`
 IR/Up = `DInput/0/Keyboard Mouse:Cursor Y-`
 IR/Down = `DInput/0/Keyboard Mouse:Cursor Y+`
@@ -14,9 +14,9 @@ IR/Right = `DInput/0/Keyboard Mouse:Cursor X+`
 Shake/X = `DInput/0/Keyboard Mouse:Click 2`
 Shake/Y = `DInput/0/Keyboard Mouse:Click 2`
 Shake/Z = `DInput/0/Keyboard Mouse:Click 2`
-Extension = Drums
-Nunchuk/Buttons/C = Select
-Nunchuk/Buttons/Z = Back
+Extension = Nunchuk
+Nunchuk/Buttons/C = `DInput/0/Keyboard Mouse:LCONTROL`
+Nunchuk/Buttons/Z = `DInput/0/Keyboard Mouse:LSHIFT`
 Nunchuk/Stick/Up = Up
 Nunchuk/Stick/Down = Down
 Nunchuk/Stick/Left = Left
@@ -46,4 +46,3 @@ D-Pad/Up = `DInput/0/Keyboard Mouse:UP`
 D-Pad/Down = `DInput/0/Keyboard Mouse:DOWN`
 D-Pad/Left = `DInput/0/Keyboard Mouse:LEFT`
 D-Pad/Right = `DInput/0/Keyboard Mouse:RIGHT`
-Options/Sideways Wiimote = 1.0000000000000000
