--- a/Data/Sys/Profiles/GCPad/Touch Grip.ini
+++ b/Data/Sys/Profiles/GCPad/Touch Grip.ini
@@ -19,6 +19,7 @@ Triggers/L = LGrip
 Triggers/R = RGrip
 Triggers/L-Analog = LGrip
 Triggers/R-Analog = RGrip
+Rumble/Motor = `LRumble05` | `RRumble05`
 D-Pad/Up = `LStickY+` & LTrigger
 D-Pad/Down = `LStickY-` & LTrigger
 D-Pad/Left = `LStickX-` & LTrigger
