--- a/Data/Sys/Profiles/Wiimote/Touch Classic ABXY.ini
+++ b/Data/Sys/Profiles/Wiimote/Touch Classic ABXY.ini
@@ -29,9 +29,7 @@ Classic/Left Stick/Left = `LStickX-` & !LGrip
 Classic/Left Stick/Right = `LStickX+` & !LGrip
 Classic/Right Stick/Up = `RStickY+`
 Classic/Right Stick/Down = `RStickY-`
-
 Classic/Right Stick/Left = `RStickX-`
-
 Classic/Right Stick/Right = `RStickX+`
 Classic/Triggers/L = LTrigger
 Classic/Triggers/R = RTrigger
@@ -41,6 +39,7 @@ Classic/D-Pad/Up = `LStickY+` & LGrip
 Classic/D-Pad/Down = `LStickY-` & LGrip
 Classic/D-Pad/Left = `LStickX-` & LGrip
 Classic/D-Pad/Right = `LStickX+` & LGrip
+Rumble/Motor = `LRumble10` | `RRumble10`
 D-Pad/Up = `RStickY+` & RGrip
 D-Pad/Down = `RStickY-` & RGrip
 D-Pad/Left = `RStickX-` & RGrip
