--- a/Data/Sys/Profiles/Wiimote/Touch Classic.ini
+++ b/Data/Sys/Profiles/Wiimote/Touch Classic.ini
@@ -14,6 +14,7 @@ Nunchuk/Stick/Up = `LStickY+`
 Nunchuk/Stick/Down = `LStickY-`
 Nunchuk/Stick/Left = `LStickX-`
 Nunchuk/Stick/Right = `LStickX+`
+Rumble/Motor = `LRumble10` | `RRumble10`
 D-Pad/Up = `RStickY+`
 D-Pad/Down = `RStickY-`
 D-Pad/Left = `RStickX-`
