--- a/Data/Sys/Profiles/Wiimote/Touch Drums.ini
+++ b/Data/Sys/Profiles/Wiimote/Touch Drums.ini
@@ -26,6 +26,7 @@ Drums/Stick/Left = `LStickX-`
 Drums/Stick/Right = `LStickX+`
 Drums/Buttons/- = LThumb
 Drums/Buttons/+ = RThumb
+Rumble/Motor = `LRumble10` | `RRumble10`
 D-Pad/Up = `RStickY+`
 D-Pad/Down = `RStickY-`
 D-Pad/Left = `RStickX-`
