--- a/Data/Sys/Profiles/Wiimote/Touch Wiimote.ini
+++ b/Data/Sys/Profiles/Wiimote/Touch Wiimote.ini
@@ -13,6 +13,7 @@ Nunchuk/Stick/Up = `LStickY+`
 Nunchuk/Stick/Down = `LStickY-`
 Nunchuk/Stick/Left = `LStickX-`
 Nunchuk/Stick/Right = `LStickX+`
+Rumble/Motor = `RRumble10`
 D-Pad/Up = `LStickY+` + `RStickY+`
 D-Pad/Down = `LStickY-` + `RStickY-`
 D-Pad/Left = `LStickX-` + `RStickX-`
