--- a/Data/Sys/Profiles/Wiimote/Vive Nunchuk A12MP.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Nunchuk A12MP.ini
@@ -21,6 +21,7 @@ Nunchuk/Stick/Up = `LTouchY+`
 Nunchuk/Stick/Down = `LTouchY-`
 Nunchuk/Stick/Left = `LTouchX-`
 Nunchuk/Stick/Right = `LTouchX+`
+Rumble/Motor = RHaptic
 D-Pad/Threshold = 35.000000000000000
 D-Pad/Up = `RAnalogY+`
 D-Pad/Down = `RAnalogY-`
