--- a/Data/Sys/Profiles/Wiimote/Vive Nunchuk AUDLR.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Nunchuk AUDLR.ini
@@ -72,6 +72,7 @@ Drums/Stick/Left = `LAnalogX-`
 Drums/Stick/Right = `LAnalogX+`
 Drums/Buttons/- = LMenu
 Drums/Buttons/+ = RMenu
+Rumble/Motor = RHaptic
 D-Pad/Threshold = 35.000000000000000
 D-Pad/Up = RClickUp & (!RGrip)
 D-Pad/Down = RClickDown & (!RGrip)
