--- a/Data/Sys/Profiles/GCPad/Touch Named.ini
+++ b/Data/Sys/Profiles/GCPad/Touch Named.ini
@@ -19,6 +19,7 @@ Triggers/L = LTrigger
 Triggers/R = RTrigger
 Triggers/L-Analog = LTrigger
 Triggers/R-Analog = RTrigger
+Rumble/Motor = `LRumble05` | `RRumble05`
 D-Pad/Up = `LStickY+` & LGrip
 D-Pad/Down = `LStickY-` & LGrip
 D-Pad/Left = `LStickX-` & LGrip
