--- a/Data/Sys/Profiles/GCPad/Vive GameCube.ini
+++ b/Data/Sys/Profiles/GCPad/Vive GameCube.ini
@@ -1,31 +1,28 @@
 [Profile]
 Device = VR/0/Vive
-Buttons/A = RGameCubeA
-Buttons/B = RGameCubeB
-Buttons/X = RGameCubeX
-Buttons/Y = RGameCubeY
-Buttons/Z = RGrip
-Buttons/Start = RMenu
+Buttons/A = RGameCubeA & !LGrip
+Buttons/B = RGameCubeB & !LGrip
+Buttons/X = RGameCubeX & !LGrip
+Buttons/Y = RGameCubeY & !LGrip
+Buttons/Z = RGrip & !LGrip
+Buttons/Start = RMenu & !LGrip
 Buttons/Mic = LGrip
 Main Stick/Dead Zone = 9.0000000000000000
-Main Stick/Up = `LAnalogY+`
-Main Stick/Down = `LAnalogY-`
-Main Stick/Left = `LAnalogX-`
-Main Stick/Right = `LAnalogX+`
-Main Stick/Modifier = `DInput/0/Keyboard Mouse:LSHIFT`
-Main Stick/Modifier/Range = 50.000000000000000
+Main Stick/Up = `LAnalogY+` & !LGrip
+Main Stick/Down = `LAnalogY-` & !LGrip
+Main Stick/Left = `LAnalogX-` & !LGrip
+Main Stick/Right = `LAnalogX+` & !LGrip
 C-Stick/Dead Zone = 9.0000000000000000
-C-Stick/Up = `RAnalogY+`
-C-Stick/Down = `RAnalogY-`
-C-Stick/Left = `RAnalogX-`
-C-Stick/Right = `RAnalogX+`
-C-Stick/Modifier = `DInput/0/Keyboard Mouse:LCONTROL`
-C-Stick/Modifier/Range = 50.000000000000000
-Triggers/L = LTrigger
-Triggers/R = RTrigger
-Triggers/L-Analog = LTrigger
-Triggers/R-Analog = RTrigger
-D-Pad/Up = LClickUp
-D-Pad/Down = LClickDown
-D-Pad/Left = LClickLeft
-D-Pad/Right = LClickRight
+C-Stick/Up = `RAnalogY+` & !LGrip
+C-Stick/Down = `RAnalogY-` & !LGrip
+C-Stick/Left = `RAnalogX-` & !LGrip
+C-Stick/Right = `RAnalogX+` & !LGrip
+Triggers/L = LTrigger & !LGrip
+Triggers/R = RTrigger & !LGrip
+Triggers/L-Analog = LTrigger & !LGrip
+Triggers/R-Analog = RTrigger & !LGrip
+Rumble/Motor = LHaptic | RHaptic
+D-Pad/Up = LClickUp & !LGrip
+D-Pad/Down = LClickDown & !LGrip
+D-Pad/Left = LClickLeft & !LGrip
+D-Pad/Right = LClickRight & !LGrip
