--- a/Data/Sys/Profiles/Wiimote/Touch Guitar.ini
+++ b/Data/Sys/Profiles/Wiimote/Touch Guitar.ini
@@ -39,6 +39,7 @@ Drums/Stick/Left = `LStickX-`
 Drums/Stick/Right = `LStickX+`
 Drums/Buttons/- = LThumb
 Drums/Buttons/+ = RThumb
+Rumble/Motor = `RRumble10`
 D-Pad/Up = `RStickY+`
 D-Pad/Down = `RStickY-`
 D-Pad/Left = `RStickX-`
