--- a/Data/Sys/Profiles/Wiimote/Touch Wiimote Sideways.ini
+++ b/Data/Sys/Profiles/Wiimote/Touch Wiimote Sideways.ini
@@ -13,6 +13,7 @@ Nunchuk/Stick/Up = `LStickY+`
 Nunchuk/Stick/Down = `LStickY-`
 Nunchuk/Stick/Left = `LStickX-`
 Nunchuk/Stick/Right = `LStickX+`
+Rumble/Motor = `LRumble10` | `RRumble10`
 D-Pad/Up = `LStickY+`
 D-Pad/Down = `LStickY-`
 D-Pad/Left = `LStickX-`
