--- a/Data/Sys/Profiles/Wiimote/Vive Classic Controller.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Classic Controller.ini
@@ -65,4 +65,5 @@ Drums/Stick/Left = `LAnalogX-`
 Drums/Stick/Right = `LAnalogX+`
 Drums/Buttons/- = LMenu
 Drums/Buttons/+ = RMenu
+Rumble/Motor = LHaptic | RHaptic
 D-Pad/Threshold = 35.000000000000000
