--- a/Data/Sys/Profiles/Wiimote/Vive Drums.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Drums.ini
@@ -72,6 +72,7 @@ Drums/Stick/Left = `LAnalogX-`
 Drums/Stick/Right = `LAnalogX+`
 Drums/Buttons/- = LMenu
 Drums/Buttons/+ = RMenu
+Rumble/Motor = LHaptic | RHaptic
 D-Pad/Threshold = 35.000000000000000
 D-Pad/Up = `LAnalogY+` & RGrip
 D-Pad/Down = `LAnalogY-` & RGrip
