--- a/Data/Sys/Profiles/Wiimote/Vive Wiimote Sideways Touch.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Wiimote Sideways Touch.ini
@@ -71,6 +71,7 @@ Drums/Stick/Left = `LAnalogX-`
 Drums/Stick/Right = `LAnalogX+`
 Drums/Buttons/- = LMenu
 Drums/Buttons/+ = RMenu
+Rumble/Motor = LHaptic | RHaptic
 D-Pad/Threshold = 35.000000000000000
 D-Pad/Up = `LTouchY+`
 D-Pad/Down = `LTouchY-`
