--- a/Data/Sys/GameSettings/D43.ini
+++ b/Data/Sys/GameSettings/D43.ini
@@ -6,7 +6,7 @@
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
 EmulationStateId = 4
-EmulationIssues =
+EmulationIssues = Needs EFB to RAM for the pause menu (background and Link).
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
@@ -17,3 +17,5 @@ EmulationIssues =
 [ActionReplay]
 # Add action replay cheats here.
 
+[Video_Hacks]
+EFBToTextureEnable = False
