Force EFB2Tex for Story Hour: Adventures and Story Hour: Fairy Tales

--- a/Data/Sys/GameSettings/R3A.ini
+++ b/Data/Sys/GameSettings/R3A.ini
@@ -6,7 +6,7 @@
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
 EmulationStateId = 4
-EmulationIssues = Requires Real XFB to prevent flickering.
+EmulationIssues = Requires Real XFB and EFB2Tex to fix various issues.
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
@@ -16,6 +16,9 @@ EmulationIssues = Requires Real XFB to prevent flickering.
 
 [ActionReplay]
 # Add action replay cheats here.
+
+[Video_Hacks]
+EFBToTextureEnable = True
 
 [Video_Settings]
 UseXFB = True
