--- a/Data/Sys/GameSettings/GB3.ini
+++ b/Data/Sys/GameSettings/GB3.ini
@@ -9,8 +9,7 @@ EmulationStateId = 4
 EmulationIssues =
 
 [Core]
-# Progressive Scan is broken by the game by default, no need to enable it
-ProgressiveScan = False
+# Progressive Scan is broken by the game by default, disabled featureProgressiveScan = False
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
