GameIni: Fixed Comment for Progressive Scan in BMX XXX
Second comment fix

--- a/Data/Sys/GameSettings/GB3.ini
+++ b/Data/Sys/GameSettings/GB3.ini
@@ -9,7 +9,8 @@ EmulationStateId = 4
 EmulationIssues =
 
 [Core]
-# Progressive Scan is broken by the game by default, disabled featureProgressiveScan = False
+# Progressive Scan is broken by the game by default, disabled feature
+ProgressiveScan = False
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
