--- a/Data/Sys/GameSettings/GB3.ini
+++ b/Data/Sys/GameSettings/GB3.ini
@@ -2,6 +2,8 @@
 
 [Core]
 # Values set here will override the main Dolphin settings.
+# Progressive Scan is broken by the game by default, disabled feature
+ProgressiveScan = False
 
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
