--- a/Data/Sys/GameSettings/G6Q.ini
+++ b/Data/Sys/GameSettings/G6Q.ini
@@ -18,5 +18,6 @@ EmulationIssues = Needs real xfb for the videos to display.
 # Add action replay cheats here.
 
 [Video_Settings]
+SafeTextureCacheColorSamples = 0
 UseXFB = True
 UseRealXFB = True
