Show thumb position, and allow configuring which texture to use for each hand, and loading it from profiles.

--- a/Data/Sys/Profiles/GCPad/Vive GameCube.ini
+++ b/Data/Sys/Profiles/GCPad/Vive GameCube.ini
@@ -26,3 +26,5 @@ D-Pad/Up = LClickUp & !LGrip
 D-Pad/Down = LClickDown & !LGrip
 D-Pad/Left = LClickLeft & !LGrip
 D-Pad/Right = LClickRight & !LGrip
+LeftTexture = "Vive Left GameCube"
+RightTexture = "Vive Right GameCube"
