--- a/Data/Sys/Profiles/Wiimote/Vive Classic Controller.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Classic Controller.ini
@@ -67,3 +67,5 @@ Drums/Buttons/- = LMenu
 Drums/Buttons/+ = RMenu
 Rumble/Motor = LHaptic | RHaptic
 D-Pad/Threshold = 35.000000000000000
+LeftTexture = "Vive Classic Left"
+RightTexture = "Vive Classic Right"
