--- a/Data/Sys/Profiles/Wiimote/Vive Drums.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Drums.ini
@@ -79,3 +79,5 @@ D-Pad/Down = `LAnalogY-` & RGrip
 D-Pad/Left = `LAnalogX-` & RGrip
 D-Pad/Right = `LAnalogX+` & RGrip
 Options/Sideways Wiimote = 1.0000000000000000
+LeftTexture = ""
+RightTexture = ""
