--- a/Data/Sys/Profiles/Wiimote/Vive Guitar.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Guitar.ini
@@ -79,3 +79,5 @@ D-Pad/Down = `RAnalogY-` & RGrip
 D-Pad/Left = `RAnalogX-` & RGrip
 D-Pad/Right = `RAnalogX+` & RGrip
 Options/Sideways Wiimote = 1.0000000000000000
+LeftTexture = "Vive Guitar Left"
+RightTexture = "Vive Guitar Right"
