--- a/Data/Sys/Profiles/Wiimote/Vive Nunchuk A12MP GripDPad.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Nunchuk A12MP GripDPad.ini
@@ -27,3 +27,5 @@ D-Pad/Up = RClickUp & RGrip
 D-Pad/Down = RClickDown & RGrip
 D-Pad/Left = RClickLeft & RGrip
 D-Pad/Right = RClickRight & RGrip
+LeftTexture = "Vive Nunchuk"
+RightTexture = "Vive Wiimote A12MP GripDPad"
