--- a/Data/Sys/Profiles/Wiimote/Vive Nunchuk AD2M1.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Nunchuk AD2M1.ini
@@ -27,3 +27,5 @@ D-Pad/Up = `RAnalogY+`
 D-Pad/Down = `RAnalogY-` | RClickUp
 D-Pad/Left = `RAnalogX-`
 D-Pad/Right = `RAnalogX+`
+LeftTexture = "Vive Nunchuk"
+RightTexture = "Vive Wiimote AD2M1"
