--- a/Data/Sys/Profiles/Wiimote/Vive Wiimote AUDLR.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Wiimote AUDLR.ini
@@ -77,3 +77,5 @@ D-Pad/Up = RClickUp & (!RGrip)
 D-Pad/Down = RClickDown & (!RGrip)
 D-Pad/Left = RClickLeft & (!RGrip)
 D-Pad/Right = RClickRight & (!RGrip)
+LeftTexture = ""
+RightTexture = "Vive Wiimote AUDLR"
