--- a/Data/Sys/Profiles/Wiimote/Vive Wiimote Classic.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Wiimote Classic.ini
@@ -78,3 +78,5 @@ D-Pad/Up = `RAnalogY+` & RGrip
 D-Pad/Down = `RAnalogY-` & RGrip
 D-Pad/Left = `RAnalogX-` & RGrip
 D-Pad/Right = `RAnalogX+` & RGrip
+LeftTexture = "Vive Classic Left"
+RightTexture = "Vive Classic Right"
