--- a/Data/Sys/Profiles/Wiimote/Vive Wiimote Sideways DPad.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Wiimote Sideways DPad.ini
@@ -78,3 +78,5 @@ D-Pad/Down = LClickDown
 D-Pad/Left = LClickLeft
 D-Pad/Right = LClickRight
 Options/Sideways Wiimote = 1.0000000000000000
+LeftTexture = "Vive Wiimote Left Sideways"
+RightTexture = "Vive Wiimote Right Sideways"
