--- a/Data/Sys/Profiles/Wiimote/Vive Wiimote Sideways Touch.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Wiimote Sideways Touch.ini
@@ -78,3 +78,5 @@ D-Pad/Down = `LTouchY-`
 D-Pad/Left = `LTouchX-`
 D-Pad/Right = `LTouchX+`
 Options/Sideways Wiimote = 1.0000000000000000
+LeftTexture = "Vive Wiimote Left Sideways"
+RightTexture = "Vive Wiimote Right Sideways"
