--- a/Data/Sys/Profiles/Wiimote/Vive Wiimote Two Handed DPad.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Wiimote Two Handed DPad.ini
@@ -77,3 +77,5 @@ D-Pad/Up = LClickUp
 D-Pad/Down = LClickDown
 D-Pad/Left = LClickLeft
 D-Pad/Right = LClickRight
+LeftTexture = "Vive Wiimote Left Two-Handed"
+RightTexture = "Vive Wiimote Right Two-Handed"
