--- a/Data/Sys/Profiles/Wiimote/Vive Wiimote Two Handed Touch.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Wiimote Two Handed Touch.ini
@@ -77,3 +77,5 @@ D-Pad/Up = `LTouchY+`
 D-Pad/Down = `LTouchY-`
 D-Pad/Left = `LTouchX-`
 D-Pad/Right = `LTouchX+`
+LeftTexture = "Vive Wiimote Left Two-Handed"
+RightTexture = "Vive Wiimote Right Two-Handed"
