--- a/Data/Sys/Profiles/Wiimote/Vive Nunchuk 1A2MP.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Nunchuk 1A2MP.ini
@@ -78,3 +78,5 @@ D-Pad/Up = `RAnalogY+`
 D-Pad/Down = `RAnalogY-` | (RMenu & (!RGrip))
 D-Pad/Left = `RAnalogX-`
 D-Pad/Right = `RAnalogX+`
+LeftTexture = "Vive Nunchuk"
+RightTexture = "Vive Wiimote 1A2MP"
