--- a/Data/Sys/Profiles/Wiimote/Vive Nunchuk A GripButtons.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Nunchuk A GripButtons.ini
@@ -1,6 +1,6 @@
 [Profile]
 Device = VR/0/Vive
-Buttons/A = RTouchpad
+Buttons/A = (RTouchpad & !RGrip) | RClickMiddle
 Buttons/B = RTrigger
 Buttons/1 = RClickUp & RGrip
 Buttons/2 = RClickDown & RGrip
@@ -78,3 +78,5 @@ D-Pad/Up = `RAnalogY+`
 D-Pad/Down = `RAnalogY-`
 D-Pad/Left = `RAnalogX-`
 D-Pad/Right = `RAnalogX+`
+LeftTexture = "Vive Nunchuk"
+RightTexture = "Vive Wiimote A GripButtons"
