--- a/Data/Sys/Profiles/Wiimote/Vive Nunchuk A12MP.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Nunchuk A12MP.ini
@@ -27,3 +27,5 @@ D-Pad/Up = `RAnalogY+`
 D-Pad/Down = `RAnalogY-`
 D-Pad/Left = `RAnalogX-`
 D-Pad/Right = `RAnalogX+`
+LeftTexture = "Vive Nunchuk"
+RightTexture = "Vive Wiimote A12MP"
