--- a/Data/Sys/Profiles/Wiimote/Vive Nunchuk H12MP.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Nunchuk H12MP.ini
@@ -78,3 +78,5 @@ D-Pad/Up = `RAnalogY+`
 D-Pad/Down = `RAnalogY-`
 D-Pad/Left = `RAnalogX-`
 D-Pad/Right = `RAnalogX+`
+LeftTexture = "Vive Nunchuk"
+RightTexture = "Vive Wiimote H12MP"
