--- a/Data/Sys/Profiles/Wiimote/Vive Wiimote 1A2MP.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Wiimote 1A2MP.ini
@@ -77,3 +77,5 @@ D-Pad/Up = `RAnalogY+`
 D-Pad/Down = `RAnalogY-` | (RMenu & (!RGrip))
 D-Pad/Left = `RAnalogX-`
 D-Pad/Right = `RAnalogX+`
+LeftTexture = ""
+RightTexture = "Vive Wiimote 1A2MP"
