--- a/Data/Sys/Profiles/Wiimote/Vive Wiimote A GripButtons.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Wiimote A GripButtons.ini
@@ -1,6 +1,6 @@
 [Profile]
 Device = VR/0/Vive
-Buttons/A = RTouchpad
+Buttons/A = (RTouchpad & !RGrip) | RClickMiddle
 Buttons/B = RTrigger
 Buttons/1 = RClickUp & RGrip
 Buttons/2 = RClickDown & RGrip
@@ -77,3 +77,5 @@ D-Pad/Up = `RAnalogY+`
 D-Pad/Down = `RAnalogY-`
 D-Pad/Left = `RAnalogX-`
 D-Pad/Right = `RAnalogX+`
+LeftTexture = ""
+RightTexture = "Vive Wiimote A GripButtons"
