--- a/Data/Sys/Profiles/Wiimote/Vive Wiimote A12MP.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Wiimote A12MP.ini
@@ -77,3 +77,5 @@ D-Pad/Up = `RAnalogY+`
 D-Pad/Down = `RAnalogY-`
 D-Pad/Left = `RAnalogX-`
 D-Pad/Right = `RAnalogX+`
+LeftTexture = ""
+RightTexture = "Vive Wiimote A12MP"
