--- a/Data/Sys/Profiles/Wiimote/Vive Wiimote AD2M1.ini
+++ b/Data/Sys/Profiles/Wiimote/Vive Wiimote AD2M1.ini
@@ -77,3 +77,5 @@ D-Pad/Up = `RAnalogY+`
 D-Pad/Down = `RAnalogY-` | RClickUp
 D-Pad/Left = `RAnalogX-`
 D-Pad/Right = `RAnalogX+`
+LeftTexture = ""
+RightTexture = "Vive Wiimote AD2M1"
