Implement experimental Vulkan backend
Vulkan: Base work

Vulkan: Implement deferred resource destruction

Vulkan: Clear EFB textures after creating before use

Vulkan: Functioning shader compiler, vertex uploads

Vulkan: Starting to hook up state tracker to rendering

Vulkan: Vertex formats

Vulkan: Hook StateTracker/VertexManager up to VertexFormat

Vulkan: State tracking of rasterization/depth stencil/blend states

Vulkan: Partially implement Renderer::ClearScreen

Vulkan: Add support for "backend shaders", i.e. utility shaders

Vulkan: Shader-based ClearScreen

Vulkan: Disable pass-through geometry shaders

ShaderGen: Handle differences between OpenGL and Vulkan GLSL

ShaderGen: Handle right-handed NDC space for Vulkan

ShaderGen: Fix mismatched interpolator locations with Vulkan

Vulkan: Fixing debug layer errors

Vulkan: Backend for sampler states

Vulkan: Fix issues with utility shader descriptor set binding

Vulkan: Minimal TextureCache implementation

Vulkan: Update/binding descriptor sets in StateTracker

Vulkan: s/BackendShader/UtilityShader/

Vulkan: Don't mirror device features, just use the vulkan struct directly

Vulkan: Properly align uniform buffers/texture upload buffers

Vulkan: Code cleanups

Vulkan: Implement constant storage and uploads

Vulkan: Implement SetViewport/SetScissorRect

Vulkan: Implement SetSamplerState

Vulkan: Various fixes

Vulkan: Refactor utility shader descriptor set binding

Vulkan: Shader compiler tweaks

Vulkan: Fence tracking for StreamBuffer

Vulkan: Build fixes

Vulkan: xlib/linux support

Vulkan: Warning fix

Vulkan: Split bindings up into 3 descriptor sets, use dynamic ubos

Vulkan: StreamBuffer changes

Allocating behind the GPU is okay if we've already moved the pointer back,
even without allow_reuse

Vulkan: Clip control support is implied, depth range is 0..1

Vulkan: Various fixes to get to the point of rendering intros

Vulkan: Use Texture2D for swap chain images

Vulkan: Allow multiple texture uploads etc inbetw

--- a/Source/Core/VideoBackends/CMakeLists.txt
+++ b/Source/Core/VideoBackends/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(OGL)
 add_subdirectory(Null)
 add_subdirectory(Software)
+add_subdirectory(Vulkan)
 # TODO: Add other backends here!
