GameIni: Force LLE Audio on Star Wars: Rogue Leader
Force LLE audio output on all Star Wars: Rogue Leader releases in order to fix the constant glitchy noise audio ouput.

--- a/Data/Sys/GameSettings/GSW.ini
+++ b/Data/Sys/GameSettings/GSW.ini
@@ -3,6 +3,8 @@
 [Core]
 # Values set here will override the main Dolphin settings.
 MMU = 1
+# LLE audio enabled by default for a listenable output
+DSPHLE = False
 
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
