--- a/Data/Sys/GameSettings/GLR.ini
+++ b/Data/Sys/GameSettings/GLR.ini
@@ -3,6 +3,8 @@
 [Core]
 # Values set here will override the main Dolphin settings.
 MMU = 1
+# LLE audio enabled by default for a listenable output
+DSPHLE = False
 
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
