--- a/Data/Sys/GameSettings/GLR.ini
+++ b/Data/Sys/GameSettings/GLR.ini
@@ -6,6 +6,10 @@ MMU = 1
 # LLE audio enabled by default for a listenable output
 DSPHLE = False
 
+[DSP]
+# Ensure the LLE recompiler gets selected and not interpreter.
+EnableJIT = True 
+
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
 EmulationStateId = 4
