VideoCommon: Split an AbstractTexture out of Texture Cache.
Initial OpenGL implementation, DirectX 11/12 get broken futher.
The changes there are mostly hacks to keep things building.

--- a/Source/Core/VideoBackends/D3D/D3D.vcxproj.filters
+++ b/Source/Core/VideoBackends/D3D/D3D.vcxproj.filters
@@ -127,5 +127,8 @@
     <ClInclude Include="BoundingBox.h">
       <Filter>Render</Filter>
     </ClInclude>
+    <ClInclude Include="AbstractTexture.h">
+      <Filter>Render</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
