Vulkan: Code cleanups

--- a/Source/Core/VideoBackends/Vulkan/CMakeLists.txt
+++ b/Source/Core/VideoBackends/Vulkan/CMakeLists.txt
@@ -1,8 +1,21 @@
 set(SRCS
-	VulkanBackend.cpp
-	Render.cpp
-	VertexManager.cpp
+	CommandBufferManager.cpp
+	FramebufferManager.cpp
+	Helpers.cpp
+	ObjectCache.cpp
+	Renderer.cpp
 	ShaderCache.cpp
+	StateTracker.cpp
+	StaticShaderCache.cpp
+	StreamBuffer.cpp
+	SwapChain.cpp
+	Texture2D.cpp
+	TextureCache.cpp
+	Util.cpp
+	VertexFormat.cpp
+	VertexManager.cpp
+	VulkanImports.cpp
+	main.cpp
 )
 
 set(LIBS
